--- a/dafput.html
+++ b/dafput.html
@@ -15,12 +15,12 @@
     <title>Daftar Putar</title>
     <link href="dist/dafputout.css" rel="stylesheet">
 </head>
-<body class="flex flex-col min-h-screen bg-zinc-50">
+<body class="flex flex-col min-h-screen bg-[#121111]">
     <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
             <div class="flex items-center justify-between relative">
                 <div class="px-7 lg:px-32">
-                    <a href="./" class="font-bold text-lg text-prim block py-6 ">Beranda</a>
+                    <a href="./" class="font-bold text-lg text-wht block py-6 ">Beranda</a>
                 </div>
                 <div class="flex items-center px-7 lg:px-32">
                     <button id="hamburger" name="hamburger" type="button" class="block absolute right-7 lg:hidden">
@@ -29,15 +29,15 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
                     </button>
                     <nav id="nav-menu"
-                        class="hidden absolute py-3 bg-white bg-opacity-90 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-3 bg-[#0c0c0c] bg-opacity-90 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="./memorandom"
-                                    class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
+                                    class="text-base font-medium text-wht py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
                                 <a href="https://www.instagram.com/submisiroom/" target="_blank"
-                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisiroom</a>
+                                    class="text-base font-medium text-wht py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisiroom</a>
                             </li>
                         </ul>
                     </nav>
@@ -45,23 +45,33 @@
             </div>
         </div>
     </header>
-    <div class="pt-24 pb-16 bg-zinc-50">
+    <div class="pt-24 pb-16">
         <div class="container mx-auto px-7 lg:px-72">
-            <h1 class=" text-3xl font-bold lg:text-4xl text-center text-prim">Daftar Putar</h1>
-            <h4 class=" text-sm mt-1 text-prim pb-16 text-center">Tempat berbagi musik dari saya yang awam</h4>
-            <div class="border-t-2 pb-2 border-t-black"></div>
+            <h1 class=" text-2xl font-bold lg:text-4xl text-center text-wht ">Daftar Putar</h1>
+            <h4 class=" text-sm mt-1 text-wht pb-16 text-center">Tempat berbagi musik dari saya yang awam</h4>
+            <div class="border-t-2 pb-2 border-t-prim"></div>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5PdgIAHzwDvTZRjIGSQGtN?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            <div class="box text-white bg-black bg-opacity-90 rounded-lg mt-2 py-1 text-center">
-                <p class="leading-relaxed">Selengkapnya</p>
+            <div class="box text-center">
+                <p class="text-sm text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-2">Tentang</p>
             </div>
             <div class="nobox text-center hidden">
-                <p class="leading-relaxed text-white bg-black bg-opacity-90 rounded-lg mt-2 py-1">Tutup</p>
-                <p class="leading-relaxed mt-2 py-1 text-justify">Alice in Chains • Unplugged • 1996 -  
+                <p class="text-sm text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-2">Tutup</p>
+                <p class="leading-relaxed text-justify text-[#f4f4f4] pb-3">Alice in Chains • Unplugged • 1996 -  
                     Rasanya terkesan aneh ketika pertama kali mengetahui nama band ini. Mungkin Alice in Chains akan mudah dikenali ketika diceritakan masih satu angkatan dan satu kota dengan band lainnya yang lebih familiar, seperti Nirvana atau Pearl Jam. Awalnya, lagu-lagu mereka cenderung kurang asik untuk telinga saya yang overdosis mengonsumsi lagu-lagu fyp tiktok. Namun, setelah dicerna baik-baik, wah. GILAAA. Lirik dan perpaduan vokal harmoninya begitu mengena. Terutama di album live ini, Alice in Chains tampil dengan beberapa lagu mereka secara akustik sesuai dengan nama acaranya "MTV Unplugged". Lagu-lagu yang dibawakan terdengar jauh berbeda jika dibandingkan dengan versi album studionya. Kesan suram nan intim menyatu. Secara keseluruhan, semua lagu tidak ada yang saya loncati ketika diputar dari track pertama. Namun, "Nutshell", "Brother", "No Excuses", "Down in A Hole", "Angry Chair" dan "Rooster" yang paling tertanam di kepala. Pemutaran album ini akan lebih baik jika sekaligus melihat videonya di youtube dibandingkan hanya mendengarkannya di spotify.<a href="https://youtube.com/playlist?list=PLclODpQJhNz7vm19Ab3k31tUX7dncoup4" class="text-blue-400"> Link video disini.</a></p>
             </div>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/24eGklcEnMaVcGXzmJSeoD?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <div class="box1 text-center">
+                <p class="text-sm text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-2">Tentang</p>
+            </div>
+            <div class="nobox1 text-center hidden">
+                <p class="text-sm text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-2">Tutup</p>
+                <p class="leading-relaxed text-justify text-[#f4f4f4] pb-3">Alice in Chains • Unplugged • 1996 -  
+                    Rasanya terkesan aneh ketika pertama kali mengetahui nama band ini. Mungkin Alice in Chains akan mudah dikenali ketika diceritakan masih satu angkatan dan satu kota dengan band lainnya yang lebih familiar, seperti Nirvana atau Pearl Jam. Awalnya, lagu-lagu mereka cenderung kurang asik untuk telinga saya yang overdosis mengonsumsi lagu-lagu fyp tiktok. Namun, setelah dicerna baik-baik, wah. GILAAA. Lirik dan perpaduan vokal harmoninya begitu mengena. Terutama di album live ini, Alice in Chains tampil dengan beberapa lagu mereka secara akustik sesuai dengan nama acaranya "MTV Unplugged". Lagu-lagu yang dibawakan terdengar jauh berbeda jika dibandingkan dengan versi album studionya. Kesan suram nan intim menyatu. Secara keseluruhan, semua lagu tidak ada yang saya loncati ketika diputar dari track pertama. Namun, "Nutshell", "Brother", "No Excuses", "Down in A Hole", "Angry Chair" dan "Rooster" yang paling tertanam di kepala. Pemutaran album ini akan lebih baik jika sekaligus melihat videonya di youtube dibandingkan hanya mendengarkannya di spotify.<a href="https://youtube.com/playlist?list=PLclODpQJhNz7vm19Ab3k31tUX7dncoup4" class="text-blue-400"> Link video disini.</a></p>
+            </div>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5EEOPZlccHzvQLZQciuei5?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>  
     </div>
-    <footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
+    <footer class="bg-[#0c0c0c] pt-10 pb-10 opacity-90 mt-auto">
         <div class="container mx-auto ">
             <div class="flex justify-center">
                 <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
@@ -115,6 +125,20 @@
         nobox.addEventListener('click', function () {
             box.classList.toggle('hidden');
             nobox.classList.toggle('hidden');
+        })
+    </script>
+    <script>
+        const box1 = document.querySelector('.box1');
+        const nobox1 = document.querySelector('.nobox1');
+
+        box1.addEventListener('click', function () {
+            box1.classList.toggle('hidden');
+            nobox1.classList.toggle('hidden');
+        })
+
+        nobox1.addEventListener('click', function () {
+            box1.classList.toggle('hidden');
+            nobox1.classList.toggle('hidden');
         })
     </script>
 </body>
