--- a/dafput.html
+++ b/dafput.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHW0MMMQ1"></script>
     <script>
@@ -15,6 +16,7 @@
     <title>Daftar Putar</title>
     <link href="dist/dafputout.css" rel="stylesheet">
 </head>
+
 <body class="flex flex-col min-h-screen bg-[#121111]">
     <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
@@ -50,26 +52,52 @@
             <h1 class=" text-2xl font-bold lg:text-4xl text-center text-wht ">Daftar Putar</h1>
             <h4 class=" text-sm mt-1 text-wht pb-16 text-center">Tempat berbagi musik dari saya yang awam</h4>
             <div class="border-t-2 pb-2 border-t-prim"></div>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5PdgIAHzwDvTZRjIGSQGtN?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/5PdgIAHzwDvTZRjIGSQGtN?utm_source=generator" width="100%"
+                height="152" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
             <div class="box text-center">
                 <p class="text-sm text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tentang</p>
             </div>
             <div class="nobox hidden">
                 <p class="text-sm text-center text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tutup</p>
-                <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Alice in Chains • Unplugged • 1996 -  
-                    Rasanya terkesan aneh ketika pertama kali mengetahui nama band ini. Mungkin Alice in Chains akan mudah dikenali ketika diceritakan masih satu angkatan dan satu kota dengan band lainnya yang lebih familiar, seperti Nirvana atau Pearl Jam. Awalnya, lagu-lagu mereka cenderung kurang asik untuk telinga saya yang overdosis mengonsumsi lagu-lagu fyp tiktok. Namun, setelah dicerna baik-baik, wah. GILAAA. Lirik dan perpaduan vokal harmoninya begitu mengena. Terutama di album live ini, Alice in Chains tampil dengan beberapa lagu mereka secara akustik sesuai dengan nama acaranya "MTV Unplugged". Lagu-lagu yang dibawakan terdengar jauh berbeda jika dibandingkan dengan versi album studionya. Kesan suram nan intim menyatu. Secara keseluruhan, semua lagu tidak ada yang saya loncati ketika diputar dari track pertama. Namun, "Nutshell", "Brother", "No Excuses", "Down in A Hole", "Angry Chair" dan "Rooster" yang paling tertanam di kepala. Pemutaran album ini akan lebih baik jika sekaligus melihat videonya di youtube dibandingkan hanya mendengarkannya di spotify. <a href="https://youtube.com/playlist?list=PLclODpQJhNz7vm19Ab3k31tUX7dncoup4" class="underline">Link video disini.</a> (19/03/2023)</p>
+                <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Alice in Chains • Unplugged • 1996 -
+                    Rasanya terkesan aneh ketika pertama kali mengetahui nama band ini. Mungkin Alice in Chains akan
+                    mudah dikenali ketika diceritakan masih satu angkatan dan satu kota dengan band lainnya yang lebih
+                    familiar, seperti Nirvana atau Pearl Jam. Awalnya, lagu-lagu mereka cenderung kurang asik untuk
+                    telinga saya yang overdosis mengonsumsi lagu-lagu fyp tiktok. Namun, setelah dicerna baik-baik, wah.
+                    GILAAA. Lirik dan perpaduan vokal harmoninya begitu mengena. Terutama di album live ini, Alice in
+                    Chains tampil dengan beberapa lagu mereka secara akustik sesuai dengan nama acaranya "MTV
+                    Unplugged". Lagu-lagu yang dibawakan terdengar jauh berbeda jika dibandingkan dengan versi album
+                    studionya. Kesan suram nan intim menyatu. Secara keseluruhan, semua lagu tidak ada yang saya loncati
+                    ketika diputar dari track pertama. Namun, "Nutshell", "Brother", "No Excuses", "Down in A Hole",
+                    "Angry Chair" dan "Rooster" yang paling tertanam di kepala. Pemutaran album ini akan lebih baik jika
+                    sekaligus melihat videonya di youtube dibandingkan hanya mendengarkannya di spotify. <a
+                        href="https://youtube.com/playlist?list=PLclODpQJhNz7vm19Ab3k31tUX7dncoup4"
+                        class="underline">Link video disini.</a> (19/03/2023)</p>
             </div>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/24eGklcEnMaVcGXzmJSeoD?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/album/24eGklcEnMaVcGXzmJSeoD?utm_source=generator" width="100%"
+                height="152" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
             <div class="box1 text-center">
                 <p class="text-sm text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tentang</p>
             </div>
             <div class="nobox1 hidden">
                 <p class="text-sm text-center text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tutup</p>
-                <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Alice in Chains • Unplugged • 1996 -  
-                    Rasanya terkesan aneh ketika pertama kali mengetahui nama band ini. Mungkin Alice in Chains akan mudah dikenali ketika diceritakan masih satu angkatan dan satu kota dengan band lainnya yang lebih familiar, seperti Nirvana atau Pearl Jam. Awalnya, lagu-lagu mereka cenderung kurang asik untuk telinga saya yang overdosis mengonsumsi lagu-lagu fyp tiktok. Namun, setelah dicerna baik-baik, wah. GILAAA. Lirik dan perpaduan vokal harmoninya begitu mengena. Terutama di album live ini, Alice in Chains tampil dengan beberapa lagu mereka secara akustik sesuai dengan nama acaranya "MTV Unplugged". Lagu-lagu yang dibawakan terdengar jauh berbeda jika dibandingkan dengan versi album studionya. Kesan suram nan intim menyatu. Secara keseluruhan, semua lagu tidak ada yang saya loncati ketika diputar dari track pertama. Namun, "Nutshell", "Brother", "No Excuses", "Down in A Hole", "Angry Chair" dan "Rooster" yang paling tertanam di kepala. Pemutaran album ini akan lebih baik jika sekaligus melihat videonya di youtube dibandingkan hanya mendengarkannya di spotify. <a href="https://youtube.com/playlist?list=PLclODpQJhNz7vm19Ab3k31tUX7dncoup4" class="underline">Link video disini.</a></p>
+                <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Mad Season • Above • 1995 -
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias vel sed corporis deleniti esse id mollitia blanditiis odit numquam fugit illo dolor maxime minima veniam, iusto suscipit ipsam. Tempora quam incidunt ipsam vitae est qui sapiente iure, dolorem esse suscipit. (25/03/2023) <a
+                        href="https://youtube.com/playlist?list=PLclODpQJhNz7vm19Ab3k31tUX7dncoup4"
+                        class="underline">Link video disini.</a></p>
             </div>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5EEOPZlccHzvQLZQciuei5?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </div>  
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/artist/5EEOPZlccHzvQLZQciuei5?utm_source=generator" width="100%"
+                height="152" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+        </div>
     </div>
     <footer class="bg-[#0c0c0c] pt-10 pb-10 opacity-90 mt-auto">
         <div class="container mx-auto ">
@@ -142,4 +170,5 @@
         })
     </script>
 </body>
+
 </html>
