--- a/dafput.html
+++ b/dafput.html
@@ -62,18 +62,21 @@
             </div>
             <div class="nobox hidden">
                 <p class="text-sm text-center text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tutup</p>
-                <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Alice in Chains • Unplugged • 1996 -
-                    Rasanya terkesan aneh ketika pertama kali mengetahui nama band ini. Mungkin Alice in Chains akan
-                    mudah dikenali ketika diceritakan masih satu angkatan dan satu kota dengan band lainnya yang lebih
+                <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Rasanya terkesan aneh ketika pertama kali
+                    mengetahui nama band ini. Mungkin Alice in Chains akan
+                    mudah dikenali ketika diceritakan masih satu era dan satu kota dengan band lainnya yang lebih
                     familiar, seperti Nirvana atau Pearl Jam. Awalnya, lagu-lagu mereka cenderung kurang asik untuk
                     telinga saya yang overdosis mengonsumsi lagu-lagu fyp tiktok. Namun, setelah dicerna baik-baik, wah.
-                    GILAAA. Lirik dan perpaduan vokal harmoninya begitu mengena. Terutama di album live ini, Alice in
-                    Chains tampil dengan beberapa lagu mereka secara akustik sesuai dengan nama acaranya "MTV
-                    Unplugged". Lagu-lagu yang dibawakan terdengar jauh berbeda jika dibandingkan dengan versi album
-                    studionya. Kesan suram nan intim menyatu. Secara keseluruhan, semua lagu tidak ada yang saya loncati
-                    ketika diputar dari track pertama. Namun, "Nutshell", "Brother", "No Excuses", "Down in A Hole",
-                    "Angry Chair" dan "Rooster" yang paling tertanam di kepala. Pemutaran album ini akan lebih baik jika
-                    sekaligus melihat videonya di youtube dibandingkan hanya mendengarkannya di spotify. <a
+                    GILAAA. Lirik dan perpaduan vokal harmoninya begitu apik dan mengena. Terutama di album live ini,
+                    Alice in
+                    Chains menampilkan beberapa lagu mereka secara akustik sesuai dengan nama acaranya, MTV
+                    Unplugged. Lagu-lagu yang dibawakan terdengar jauh berbeda bahkan lebih baik jika dibandingkan
+                    dengan versi album
+                    studionya. Semua lagu di album live ini tidak ada yang saya loncati ketika diputar dari track
+                    pertama. Namun, "Nutshell", "Brother", "No Excuses", "Down in A Hole",
+                    "Angry Chair" dan "Rooster" yang paling tertanam di kepala saya. Pemutaran album ini akan lebih berkesan
+                    jika
+                    sekaligus melihat videonya di youtube dibandingkan hanya mendengarkannya di spotify, trust me. <a
                         href="https://youtube.com/playlist?list=PLclODpQJhNz7vm19Ab3k31tUX7dncoup4"
                         class="underline">Link video disini.</a> (19/03/2023)</p>
             </div>
@@ -87,16 +90,28 @@
             </div>
             <div class="nobox1 hidden">
                 <p class="text-sm text-center text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tutup</p>
-                <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Mad Season • Above • 1995 -
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias vel sed corporis deleniti esse id mollitia blanditiis odit numquam fugit illo dolor maxime minima veniam, iusto suscipit ipsam. Tempora quam incidunt ipsam vitae est qui sapiente iure, dolorem esse suscipit. (25/03/2023) <a
-                        href="https://youtube.com/playlist?list=PLclODpQJhNz7vm19Ab3k31tUX7dncoup4"
-                        class="underline">Link video disini.</a></p>
+                <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Dengan latar belakang anggotanya yang berjuang
+                    melawan adiksi narkoba maka supergrup "Seattle Sound" ini terbentuk, Mad Season. Above adalah
+                    satu-satunya album studio yang mereka rilis. Sulit bagi saya untuk tidak menyukai album ini karena
+                    vokalis Alice in Chains yang menyanyikan serta menulis semua liriknya. Sebagian besar lirik lagu di
+                    album ini terinspirasi dari buku "The Prophet" karya pujangga terkenal asal Lebanon, Khalil Gibran.
+                    Ini dapat diketahui dengan jelas pada lirik lagu "River of Deceit" yang sekaligus menjadi favorit
+                    saya di album ini. Pada bab "Pain" di buku tersebut, Khalil Gibran menuliskan kalimat "Much of your
+                    pain is self-chosen" yang kemudian oleh Layne Staley diadaptasi dengan kalimat "My pain is
+                    self-chosen". (24/03/2023)</p>
             </div>
             <iframe style="border-radius:12px"
                 src="https://open.spotify.com/embed/artist/5EEOPZlccHzvQLZQciuei5?utm_source=generator" width="100%"
                 height="152" frameBorder="0" allowfullscreen=""
                 allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                 loading="lazy"></iframe>
+                <div class="box2 text-center">
+                    <p class="text-sm text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tentang</p>
+                </div>
+                <div class="nobox2 hidden">
+                    <p class="text-sm text-center text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tutup</p>
+                    <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Singkat saja, berhubung sekarang Ramadan. Tidak lengkap rasanya jika playlist lagu tidak diisi degan musik religi. Lagu-lagu grup qasidah legend asal Semarang ini hampir dipastikan pernah lewat di telinga tiap orang. Jika hanya tahu lagunya dan tak tahu siapa artisnya, silahkan berkenalan dengan Nasida Ria. Nostalgia bener dah. (24/03/2023)</p>
+                </div>
         </div>
     </div>
     <footer class="bg-[#0c0c0c] pt-10 pb-10 opacity-90 mt-auto">
@@ -167,6 +182,20 @@
         nobox1.addEventListener('click', function () {
             box1.classList.toggle('hidden');
             nobox1.classList.toggle('hidden');
+        })
+    </script>
+    <script>
+        const box2 = document.querySelector('.box2');
+        const nobox2 = document.querySelector('.nobox2');
+
+        box2.addEventListener('click', function () {
+            box2.classList.toggle('hidden');
+            nobox2.classList.toggle('hidden');
+        })
+
+        nobox2.addEventListener('click', function () {
+            box2.classList.toggle('hidden');
+            nobox2.classList.toggle('hidden');
         })
     </script>
 </body>
