--- a/dafput.html
+++ b/dafput.html
@@ -91,7 +91,7 @@
             <div class="nobox1 hidden">
                 <p class="text-sm text-center text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tutup</p>
                 <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Dengan latar belakang anggotanya yang berjuang
-                    melawan adiksi narkoba maka supergrup "Seattle Sound" ini terbentuk, Mad Season. Above adalah
+                    melawan adiksi narkoba, maka supergrup "Seattle Sound" ini terbentuk, Mad Season. Above adalah
                     satu-satunya album studio yang mereka rilis. Sulit bagi saya untuk tidak menyukai album ini karena
                     vokalis Alice in Chains yang menyanyikan serta menulis semua liriknya. Sebagian besar lirik lagu di
                     album ini terinspirasi dari buku "The Prophet" karya pujangga terkenal asal Lebanon, Khalil Gibran.
@@ -110,7 +110,7 @@
                 </div>
                 <div class="nobox2 hidden">
                     <p class="text-sm text-center text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tutup</p>
-                    <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Singkat saja, berhubung sekarang Ramadan. Tidak lengkap rasanya jika playlist lagu tidak diisi degan musik religi. Lagu-lagu grup qasidah legend asal Semarang ini hampir dipastikan pernah lewat di telinga tiap orang. Jika hanya tahu lagunya dan tak tahu siapa artisnya, silahkan berkenalan dengan Nasida Ria. Nostalgia bener dah. (24/03/2023)</p>
+                    <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Singkat saja, berhubung sekarang Ramadan. Tidak lengkap rasanya jika playlist lagu tidak diisi dengan musik religi. Lagu-lagu grup qasidah legend asal Semarang ini hampir dipastikan pernah lewat di telinga tiap orang. Jika hanya tahu lagunya dan tak tahu siapa artisnya, silahkan berkenalan dengan Nasida Ria. Nostalgia bener dah. (24/03/2023)</p>
                 </div>
         </div>
     </div>
