--- a/dafput.html
+++ b/dafput.html
@@ -94,9 +94,9 @@
                     melawan adiksi narkoba, maka supergrup "Seattle Sound" ini terbentuk, Mad Season. Above adalah
                     satu-satunya album studio yang mereka rilis. Sulit bagi saya untuk tidak menyukai album ini karena
                     vokalis Alice in Chains yang menyanyikan serta menulis semua liriknya. Sebagian besar lirik lagu di
-                    album ini terinspirasi dari buku "The Prophet" karya pujangga terkenal asal Lebanon, Khalil Gibran.
+                    album ini terinspirasi dari buku "The Prophet" karya pujangga terkenal asal Lebanon, Kahlil Gibran.
                     Ini dapat diketahui dengan jelas pada lirik lagu "River of Deceit" yang sekaligus menjadi favorit
-                    saya di album ini. Pada bab "Pain" di buku tersebut, Khalil Gibran menuliskan kalimat "Much of your
+                    saya di album ini. Pada bab "Pain" di buku tersebut, Kahlil Gibran menuliskan kalimat "Much of your
                     pain is self-chosen" yang kemudian oleh Layne Staley diadaptasi dengan kalimat "My pain is
                     self-chosen". (24/03/2023)</p>
             </div>
