--- a/dafput.html
+++ b/dafput.html
@@ -63,12 +63,12 @@
             <div class="nobox hidden">
                 <p class="text-sm text-center text-wht bg-prim bg-opacity-90 rounded-lg mt-2 mb-2 pt-1 pb-1">Tutup</p>
                 <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Rasanya terkesan aneh ketika pertama kali
-                    mengetahui nama band ini. Mungkin Alice in Chains akan
+                    mengetahui nama band ini. Mungkin Alice In Chains akan
                     mudah dikenali ketika diceritakan masih satu era dan satu kota dengan band lainnya yang lebih
                     familiar, seperti Nirvana atau Pearl Jam. Awalnya, lagu-lagu mereka cenderung kurang asik untuk
                     telinga saya yang overdosis mengonsumsi lagu-lagu fyp tiktok. Namun, setelah dicerna baik-baik, wah.
-                    GILAAA. Lirik dan perpaduan vokal harmoninya begitu apik dan mengena. Terutama di album live ini,
-                    Alice in
+                    GILAAA. Lirik dan perpaduan vokal harmoninya begitu apik dan mengena. Pada album live ini,
+                    Alice In
                     Chains menampilkan beberapa lagu mereka secara akustik sesuai dengan nama acaranya, MTV
                     Unplugged. Lagu-lagu yang dibawakan terdengar jauh berbeda bahkan lebih baik jika dibandingkan
                     dengan versi album
@@ -93,7 +93,7 @@
                 <p class="leading-relaxed text-[#f4f4f4] pb-4 text-sm">Dengan latar belakang anggotanya yang berjuang
                     melawan adiksi narkoba, maka supergrup "Seattle Sound" ini terbentuk, Mad Season. Above adalah
                     satu-satunya album studio yang mereka rilis. Sulit bagi saya untuk tidak menyukai album ini karena
-                    vokalis Alice in Chains yang menyanyikan serta menulis semua liriknya. Sebagian besar lirik lagu di
+                    vokalis Alice In Chains yang menyanyikan serta menulis semua liriknya. Sebagian besar lirik lagu di
                     album ini terinspirasi dari buku "The Prophet" karya pujangga terkenal asal Lebanon, Kahlil Gibran.
                     Ini dapat diketahui dengan jelas pada lirik lagu "River of Deceit" yang sekaligus menjadi favorit
                     saya di album ini. Pada bab "Pain" di buku tersebut, Kahlil Gibran menuliskan kalimat "Much of your
