--- a/dafput.html
+++ b/dafput.html
@@ -39,7 +39,11 @@
                             </li>
                             <li class="group">
                                 <a href="https://www.instagram.com/submisiroom/" target="_blank"
-                                    class="text-base font-medium text-wht py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisiroom</a>
+                                    class="text-base font-medium text-wht py-2 mx-8  flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisiroom</a>
+                            </li>
+                            <li class="group">
+                                <a href="./dafput" target="_blank"
+                                    class="text-base font-medium text-wht py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Dafput</a>
                             </li>
                         </ul>
                     </nav>
