--- a/memorandom.html
+++ b/memorandom.html
@@ -39,7 +39,11 @@
                             </li>
                             <li class="group">
                                 <a href="https://www.instagram.com/submisiroom/" target="_blank"
-                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisiroom</a>
+                                    class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisiroom</a>
+                            </li>
+                            <li class="group">
+                                <a href="./dafput" target="_blank"
+                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Dafput</a>
                             </li>
                         </ul>
                     </nav>
@@ -54,11 +58,19 @@
         <div class="container mx-auto px-7 lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full mb-10 lg:px-4 lg:w-1/3">
+                    <a href="https://medium.com/@azkannawal/flea-63ceaa68cfbc">
+                        <img src="/dist/img/flea.png" class="rounded shadow-md" alt="">
+                        <h3 class="text-center mt-3 text-lg font-semibold text-prim">Flea</h3>
+                        <p class="text-prim text-center mt-2 text-sm ">April 2, 2023 <span
+                                class="bg-amber-200 px-2 ml-1 rounded-full">2 min read</span></p>
+                    </a>
+                </div>
+                <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                     <a href="./jumat">
                         <img src="/dist/img/setan.svg" class="rounded shadow-md" alt="">
                         <h3 class="text-center mt-3 text-lg font-semibold text-prim">Setan Maljum</h3>
                         <p class="text-prim text-center mt-2 text-sm ">February 10, 2023 <span
-                                class="bg-amber-200 px-2 ml-1 rounded-full">3 min read</span></p>
+                                class="bg-amber-200 px-2 ml-1 rounded-full">2 min read</span></p>
                     </a>
                 </div>
                 <div class="w-full mb-10 lg:px-4 lg:w-1/3">
@@ -74,7 +86,7 @@
                         <img src="/dist/img/pintu.jpg" class="rounded shadow-md" alt="">
                         <h3 class="text-center mt-3 text-lg font-semibold text-prim">Alternatif</h3>
                         <p class="text-prim text-center mt-2 text-sm ">December 28, 2022 <span
-                                class="bg-amber-200 px-2 ml-1 rounded-full">3 min read</span></p>
+                                class="bg-amber-200 px-2 ml-1 rounded-full">2 min read</span></p>
                     </a>
                 </div>
             </div>
