--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                 </div>
                 <div class="w-full lg:w-1/2 lg:pl-20">
                     <h1 class=" font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
-                    <a href="">
+                    <a href="https://medium.com/@azkannawal/kembali-dengan-maya-5d8562777d31">
                         <li
                             class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
-                            Kembali bersama Maya</li>
+                            Kembali dengan Maya</li>
                     </a>
                     <a href="https://medium.com/@azkannawal/flea-78e85090b1af">
                         <li
