--- a/memorandom.html
+++ b/memorandom.html
@@ -59,7 +59,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                     <a href="https://medium.com/@azkannawal">
-                        <img src="/dist/img/mayawa.png" class="rounded shadow-md" alt="">
+                        <img src="/dist/img/floyd.png" class="rounded shadow-md" alt="">
                         <h3 class="text-center mt-3 text-lg font-semibold text-prim underline decoration-amber-200 decoration-2">Selengkapnya di Medium</h3>
                         <!-- <p class="text-prim text-center mt-2 text-sm ">April 2, 2023 <span
                                 class="bg-amber-200 px-2 ml-1 rounded-full">3 min read</span></p>
